# Job_parser

./: .dockerignore  .env.dev  .env.me  .gitignore  Dockerfile  Dockerfile-react  Dockerfile-worker-health  Jenkinsfile  LICENSE  README.md  app.py  bot_create.py  docker-compose-local.yml  docker-compose-mq.yml  docker-compose-traefik.yml  docker-compose-worker.yml  docker-compose.yml  init-letsencrypt.sh  manage.py  pyproject.toml  socket_test.js  worker_healthcheck.py
core/config/: bot.py  db.py  jwt.py  proj_settings.py
core/db/: db_helper.py  uow.py
core/scripts/: adduser.py  command_list.py
core/shared/: async_session_container.py  base_dto.py  base_hash_model.py  base_repository.py  base_service.py  connection_manager.py  enums.py  errors.py  models.py  validators.py
front/: .env.dev  package.json  vite.config.mjs
front/patches/: react-router-named-routes+0.0.23.patch
front/src/: App.js  AppSettings.js  _nav.js  routes.js
migrations/: base.py
migrations/versions/: 2024_03_18_18_14-4a882f0fc6fa_init.py  2024_03_18_18_56-73020602b3fb_init.py  2024_03_24_15_19-099295fe7868_user.py  2024_03_25_23_51-d1ae94e71ff4_applications.py  2024_04_05_14_31-b3a6b526227c_service_auth.py  2024_05_17_19_16-841fe748b40b_relationships.py  2024_05_19_16_24-95f74e516b36_relationship.py  2024_05_19_16_27-43ea2ac85aed_relationship.py  2024_06_06_22_36-24fda3d55135_init.py  2024_06_08_12_45-1cdf7b082c39_init.py  (+8 more)
parsers/: __init__.py  helper.py  olx.py  pracuj.py
src/: admin_views.py  background_tasks.py  containers_builder.py  handlers.py  main.py  routers.py  some.json
tests/: conftest.py  pytest.ini  test.py  test_auth.py
(+250 files in other folders)
