[tool.poetry]
name = "job_parser"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["EnotShow <enotshow275@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.11.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
environs = "^10.3.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
beautifulsoup4 = "^4.12.3"
sqladmin = "^0.16.1"
requests = "^2.31.0"
itsdangerous = "^2.1.2"
googletrans = "^3.0.0"
PyJWT = "^2.8.0"
dependency-injector2 = "^4.41.1"
celery = {extras = ["librabbitmq"], version = "^5.4.0"}
flower = "^2.0.1"
selenium = "^4.23.1"
webdriver-manager = "^4.0.2"
pyvirtualdisplay = "^3.0"
redis-om = "0.3.0"

pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
faker = "^26.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[requires]
python_version = "3.12"
